--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,12 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body{
+  margin:0;
+  padding:0;
+  font-family: "Courier New", Courier, monospace;
+  /* background:linear-gradient(pink 0%,aqua 100%) w3c */
+  background: linear-gradient(89deg, rgb(179, 5, 202) 0%, rgb(12, 231, 235) 100%); 
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
+
+/* button {
+  cursor:pointer;
+} */
